[project]
name = "vkgifsbot"
version = "0.1.0"
description = "This is a new version on vkgifsbot idea"
authors = [
    {name = "yepIwt",email = "ReetRay@protonmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "vkbottle (>=4.4.4,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiogram (>=3.17.0,<4.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
