[project]
name = "vkgifsbot"
version = "0.1.0"
description = "This is a new version on vkgifsbot idea"
authors = [
    {name = "yepIwt",email = "ReetRay@protonmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "vkbottle (>=4.4.4,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiogram (>=3.17.0,<4.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.code-quality.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.4"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.testing.dependencies]
pytest-asyncio = "^0.25.3"


[tool.poetry.group.pytest.dependencies]
pytest = "^8.3.4"

[tool.flake8]
ignore = "W503"
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
    "main.py:E501",
    "*/prompts/*:E501"
]
exclude = [
    "local/",
    "logs/",
    "cache/*",
    "!cache/.gitkeep",
    "db.sqlite3",
    "__pycache__/",
    "*.py[cod]",
    "*$py.class",
    ".pytest_cache/",
    ".Python",
    "env/",
    ".env/",
    "build/",
    "develop-eggs/",
    "dist/",
    "downloads/",
    "eggs/",
    ".eggs/",
    "lib/",
    "lib64/",
    "parts/",
    "sdist/",
    "var/",
    "wheels/",
    "*.egg-info/",
    ".installed.cfg",
    "*.egg",
    ".env",
    ".autoenv*.zsh",
    ".venv*",
    "venv*",
    "ENV/",
    ".idea/",
    "*.iml",
    ".vscode/",
    ".DS_Store",
    "*.entry.js",
    "node_modules",
    "stats.json",
    "npm-debug.log*",
    "derby.log",
    "metastore_db",
]

[tool.mypy]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
pretty = true
show_error_codes = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "protected-access",  # Allow protected access in tests
    "missing-module-docstring",  # Optional for test files
    "redefined-outer-name",  # Allow fixture usage in tests
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "broad-exception-caught"
]


